fixed bug i produced that the tooltip was not visible anymore

--- a/src/content-tooltip/components/tooltip.css
+++ b/src/content-tooltip/components/tooltip.css
@@ -9,6 +9,7 @@
     background-color: #fff;
     color: #3eb995;
     height: 40px;
+    width: 70px;
     padding: 0px 0px;
     border-radius: 5px;
     border: 1px solid #c2c2c2;
